2008-10-10  Sven Herzberg  <sven@imendio.com>

	* src/dh-link.c:
	* src/dh-parser.c:
	* src/dh-search.c:
	* src/dh-window.c:
	* src/eggfindbar.c: Include <glib/gi18n-lib.h> and not
	<glib/gi18n.h>

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-preferences.c:
	* src/dh-preferences.h: Move key name defines from the header to
	the C file, they are not used anywhere else now.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: (window_populate): Remove the state saving and
	use dh_util_state_*.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/*.h: Add begin/end decl macros for consistency.

2008-10-10  Richard Hult  <richard@imendio.com>

	* configure.in:
	* data/ui/Makefile.am:
	* data/ui/devhelp.glade:
	* data/ui/devhelp.builder:
	* src/dh-util.[ch] (dh_util_glade_connect,
	dh_util_glade_get_file):
	* src/dh-preferences.c (dh_preferences_show_dialog): Use
	GtkBuilder instead of libglade.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-assistant.c: (dh_assistant_init): Save/restore state.
	(dh_assistant_new), (dh_assistant_search): Small style tweaks.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (dh_base_init): Setup default values.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/Makefile.am:
	* src/ige-conf.h:
	* src/ige-conf-private.h:
	* src/ige-conf.c: New file with code to read the installed
	defaults file.

	* src/ige-conf-mac.m: Use the defaults from above here to setup
	defaults for NSUserDefaults.

	* src/ige-conf-gconf.c: Get the highest level dir from the
	defaults instead of hard coding it.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/Makefile.am: Disable deprecated APIs in GLib, GDK, and GTK+.

2008-10-10  Richard Hult  <richard@imendio.com>

	* data/devhelp.schemas.in: Restructure the non-preferences keys
	that are used for saving state so we can add more of those without
	making a mess.

2008-10-10  Richard Hult  <richard@imendio.com>
